@@ -16,8 +16,8 @@ AC_SUBST(PACKAGE)
 # INTEFACE_AGE to 0.
 #
 MAJOR_VERSION=0
-MINOR_VERSION=9
-MICRO_VERSION=1
+MINOR_VERSION=10
+MICRO_VERSION=0
 INTERFACE_AGE=0
 BINARY_AGE=0
 VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${MICRO_VERSION}"
