@@ -1,4 +1,11 @@
 
+2003-12-07	Joel Becker <joel.becker@oracle.com>
+
+	* configure.in: Bump to 0.10.0 for reworking disk labels.
+	* tools/asmtool.c: Totally new asmtool code.
+	* kernel/oracleasm.c: Handle new disk label structure.
+	* include/linux/asmdisk.c: New disk label structure.
+
 2003-12-04	Joel Becker <joel.becker@oracle.com>
 
 	* vendor/{redhat,unitedlinux}/*.spec.in: %{support_ver}
